# hsc

Ressource/: Infos.org  Makefile_Template_SystemC  unix_install_systemc.sh
Uebung/UE1/SimpleAdder/: CMakeLists.txt  build.sh
Uebung/UE1/SimpleAdder/src/: adder.cpp  adder.h  main.cpp  testbench.cpp  testbench.h
Uebung/UE1/cordic/: CMakeLists.txt  cordicModule.cpp  cordicModule.h  main.cpp  systemc_ctags.sh  testbench.cpp  testbench.h
Uebung/UE1/cordic/doc/: ausarbeitung.org  ausarbeitung.tex  cordic.m
Uebung/UE1/hello_systemc/: CMakeLists.txt
Uebung/UE1/hello_systemc/doc/: cordic.m
Uebung/UE1/hello_systemc/src/: main.cpp  module.h  thread.cpp  thread.h
Uebung/UE2/cycle_master_slave/: CMakeLists.txt  main.cpp  systemc_ctags.sh  testbench.cpp  testbench.h  wb_master.cpp  wb_master.h  wb_slave.cpp  wb_slave.h
Uebung/UE2/doc/: ue2_ausarbeitung.html  ue2_ausarbeitung.org  ue2_ausarbeitung.tex
Uebung/UE2/tlm_block_master_slave/: CMakeLists.txt  bus_spec.h  master.h  slave.h  systemc_ctags.sh  top.h
Uebung/UE2/tlm_example_ms/: CMakeLists.txt  master.h  slave.h  top.h
Uebung/UE2/tlm_nb_transport/: CMakeLists.txt  main.cpp  master.h  memory_manager.h  slave.h  top.h
Uebung/UE2/tlm_nonblock_master_slave/: CMakeLists.txt  build.sh  globals.h  main.cpp  master.h  memory_manager.h  slave.h  testbench.cpp  testbench.h
Uebung/UE3/tlm_block_cordic/: CMakeLists.txt  bus_spec.h  cordicModule.cpp  cordicModule.h  cordic_driver.c  main.cpp  slave_cordic.h
Uebung/UE4/: vivado.jou
Uebung/UE4/doc/Unterlagen-20190423/SourceFiles/: I2Ctest_standalone.c  gpiotest_standalone.c
Uebung/UE4/sdk/ledCounter_bsp0/: .cproject  .project  .sdkproject  system.mss
Uebung/UE4/sdk/ledCounter_bsp0/ps7_cortexa9_0/include/: xparameters.h
Uebung/UE4/sdk/ledCounter_main0/: .cproject  .project
Uebung/UE4/sdk/ledCounter_main0/Debug/: ledCounter_main0.elf.size
Uebung/UE4/sdk/ledCounter_main0/Debug/src/: subdir.mk
Uebung/UE4/sdk/ledCounter_prj0/: .project
Uebung/UE4/vivado/led_counter/: led_counter.xpr
Uebung/UE4/vivado/led_counter/led_counter.sdk/: led_design_wrapper.hdf
Uebung/UE4/vivado/led_counter/led_counter.sdk/.metadata/: version.ini
Uebung/UE4/vivado/led_counter/led_counter.sdk/led_design_wrapper_hw_platform_0/: .project  (+1 more)
Uebung/UE5/doc/: hsc_ue5_doc.org
Uebung/UE5/hls_cordic/: bus_spec.h  cc_cordicModule_fixed.cpp  run_cordic_hls.tcl  run_vivado.sh  test_runnable  testbench_cc_cordicModule_fixed.cpp
Uebung/UE5/hls_cordic/HLS_Cordic/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
Uebung/UE5/hls_cordic/HLS_Cordic/.apc/: autopilot.apfmapping
Uebung/UE5/hls_cordic/HLS_Cordic/HLS_Cordic/: HLS_Cordic.aps  script.tcl
Uebung/UE5/tlm_block_cordic/: CMakeLists.txt  build.sh  clean.sh  cordic_driver.c  emu_cpu.h  main_c.c  main_c.h  slave_cordic.h
Uebung/UE5/tlm_block_cordic/ressource/: build.sh  calc_atan.c  tan_lut.txt
Uebung/UE6/doc/: zusätzliche_infos.html  zusätzliche_infos.org  zusätzliche_infos.tex
Uebung/UE6/tlm_block_cordic_irq/: CMakeLists.txt  Simple_Makefile  cc_cordicModule.h  cordicModule.h  cordic_driver.c  cordic_driver.h  emu_cpu.h  hal_cordic.h  main.cpp  main_c.c  main_c.h  slave_cordic.h  xcordic_sinit.c  xparameter.h  xscugic.c  xscugic.h
Uebung/UE6/tlm_block_cordic_irq/ressource/: calc_atan  calc_atan.c
Uebung/UE6/tlm_block_cordic_irq_make/include/: cc_cordicModule_fixed.h  cordic_driver.h  tlm2_base_protocol_checker.h  xcordic_sinit.h  xscugic.h
Uebung/UE6/tlm_block_cordic_irq_make/src/: cc_cordicModule.cpp  cordicModule.cpp  main.cpp  main_c.c  xcordic_sinit.c  xscugic.c
Uebung/Viehboeck_Schram_HSC_UE4/Debug/: ledCounter_main0.elf  makefile
Uebung/Viehboeck_Schram_HSC_UE4/Debug/src/: main.d
Uebung/Viehboeck_Schram_HSC_UE4/src/: main.cc
Vorlesung/: Graphen.org
(+87 files in other folders)
